# vertir

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: informe-editores-ai-video-y-arquitectura.md  timeline-ir-v1.md
tests/: test_core.py
vertir/: __init__.py  cli.py  demo.py  edit.py  ir.py  mcp_server.py  pipeline.py  probe.py  render.py  transcript.py  validate.py
vertir/web/: app.py
vertir/web/static/: index.html
